# hand-sign

./: README.md  pyproject.toml
hand_sign/: main.py
