[tool.poetry]
name = "hand-sign"
version = "0.1.0"
description = ""
authors = ["jianrong7 <ipwnjianrong@gmail.com>"]
readme = "README.md"
packages = [{include = "hand_sign"}]

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.10.21"
opencv-python = "^4.11.0.86"
pedalboard = "^0.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
